[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/menuObjects/Options/OptionTabs/Video_Options.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="Video" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
alignment = 1
script = ExtResource( 1 )

[node name="VSeparator2" type="VSeparator" parent="."]
margin_right = 424.0
margin_bottom = 720.0
mouse_filter = 2
size_flags_horizontal = 3
custom_styles/separator = SubResource( 2 )

[node name="VideoOptions" type="VBoxContainer" parent="."]
margin_left = 428.0
margin_right = 852.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 1

[node name="RESO" type="HBoxContainer" parent="VideoOptions"]
margin_top = 301.0
margin_right = 424.0
margin_bottom = 321.0

[node name="Resolution" type="Label" parent="VideoOptions/RESO"]
margin_top = 3.0
margin_right = 87.0
margin_bottom = 17.0
text = "RESOLUTION:"
align = 1

[node name="ResolutionOptionButton" type="OptionButton" parent="VideoOptions/RESO"]
margin_left = 91.0
margin_right = 424.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1

[node name="FPS" type="HBoxContainer" parent="VideoOptions"]
margin_top = 331.0
margin_right = 424.0
margin_bottom = 351.0

[node name="FPS Label" type="Label" parent="VideoOptions/FPS"]
margin_top = 3.0
margin_right = 63.0
margin_bottom = 17.0
text = "MAX FPS: "
align = 1

[node name="FPSOptionButton" type="OptionButton" parent="VideoOptions/FPS"]
margin_left = 67.0
margin_right = 424.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1

[node name="Windowed" type="HBoxContainer" parent="VideoOptions"]
margin_top = 361.0
margin_right = 424.0
margin_bottom = 385.0

[node name="fullyscreen" type="Label" parent="VideoOptions/Windowed"]
margin_top = 5.0
margin_right = 82.0
margin_bottom = 19.0
text = "FULLSCREEN:"
align = 1

[node name="ResoToggle" type="CheckBox" parent="VideoOptions/Windowed"]
margin_left = 400.0
margin_right = 424.0
margin_bottom = 24.0
size_flags_horizontal = 10

[node name="VSYNC" type="HBoxContainer" parent="VideoOptions"]
margin_top = 395.0
margin_right = 424.0
margin_bottom = 419.0

[node name="vsync" type="Label" parent="VideoOptions/VSYNC"]
margin_top = 5.0
margin_right = 48.0
margin_bottom = 19.0
text = "VSYNC: "
align = 1

[node name="VsyncToggle" type="CheckBox" parent="VideoOptions/VSYNC"]
margin_left = 400.0
margin_right = 424.0
margin_bottom = 24.0
size_flags_horizontal = 10

[node name="FXAA" type="HBoxContainer" parent="VideoOptions"]
visible = false
margin_top = 397.0
margin_right = 424.0
margin_bottom = 421.0

[node name="FXAA" type="Label" parent="VideoOptions/FXAA"]
margin_top = 5.0
margin_right = 37.0
margin_bottom = 19.0
text = "FXAA:"
align = 1

[node name="FxaaToggle" type="CheckBox" parent="VideoOptions/FXAA"]
margin_left = 400.0
margin_right = 424.0
margin_bottom = 24.0
size_flags_horizontal = 10

[node name="MSAA" type="HBoxContainer" parent="VideoOptions"]
visible = false
margin_top = 418.0
margin_right = 424.0
margin_bottom = 434.0

[node name="MSAA" type="Label" parent="VideoOptions/MSAA"]
margin_top = 1.0
margin_right = 45.0
margin_bottom = 15.0
text = "MSAA: "
align = 1

[node name="MSAASLIDER" type="HSlider" parent="VideoOptions/MSAA"]
margin_left = 49.0
margin_right = 424.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 4.0
tick_count = 4
ticks_on_borders = true

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 856.0
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
size_flags_horizontal = 3
custom_styles/separator = SubResource( 3 )

[connection signal="item_selected" from="VideoOptions/RESO/ResolutionOptionButton" to="." method="_on_ResolutionOptionButton_item_selected"]
[connection signal="mouse_entered" from="VideoOptions/RESO/ResolutionOptionButton" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="VideoOptions/RESO/ResolutionOptionButton" to="." method="_on_ResolutionOptionButton_pressed"]
[connection signal="item_selected" from="VideoOptions/FPS/FPSOptionButton" to="." method="_on_FPSOptionButton_item_selected"]
[connection signal="mouse_entered" from="VideoOptions/FPS/FPSOptionButton" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="VideoOptions/FPS/FPSOptionButton" to="." method="_on_FPSOptionButton_pressed"]
[connection signal="toggled" from="VideoOptions/Windowed/ResoToggle" to="." method="_on_ResoToggle_toggled"]
[connection signal="toggled" from="VideoOptions/VSYNC/VsyncToggle" to="." method="_on_VsyncToggle_toggled"]
[connection signal="toggled" from="VideoOptions/FXAA/FxaaToggle" to="." method="_on_FxaaToggle_toggled"]
[connection signal="value_changed" from="VideoOptions/MSAA/MSAASLIDER" to="." method="_on_HSlider_value_changed"]
